--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,6 @@ rootProject.name = 'otusJava'
 include 'hw01-gradle'
 include 'hw02-generics'
 include 'hw03-reflection'
+include 'hw04-gc'
+include 'hw04-gc'
 
