--- a/settings.gradle
+++ b/settings.gradle
@@ -3,5 +3,8 @@ include 'hw01-gradle'
 include 'hw02-generics'
 include 'hw03-reflection'
 include 'hw04-gc'
-include 'hw05-bytecode'
+//include 'hw05-bytecode'
+include 'hw06-solid'
+include 'hw10-jpql'
+include 'hw11-cache'
 
