--- a/settings.gradle
+++ b/settings.gradle
@@ -3,10 +3,15 @@ include 'hw01-gradle'
 include 'hw02-generics'
 include 'hw03-reflection'
 include 'hw04-gc'
-//include 'hw05-bytecode'
+include 'hw05-bytecode'
 include 'hw06-solid'
 include 'hw10-jpql'
 include 'hw11-cache'
 include 'hw08-io'
-
+include 'hw09-jdbc:demo'
+include 'hw09-jdbc:homework'
+include 'hw03-annot-pocc'
+include 'hw15-web_server'
+include 'patterns'
+include 'Synchronized-collections'
 
