--- a/settings.gradle
+++ b/settings.gradle
@@ -14,4 +14,5 @@ include 'hw03-annot-pocc'
 include 'hw15-web_server'
 include 'patterns'
 include 'Synchronized-collections'
+include 'hw09-structural_patterns'
 
