--- a/settings.gradle
+++ b/settings.gradle
@@ -21,4 +21,6 @@ include 'sinchronize_lecture'
 include 'hw16-IoC'
 include 'dependecy-injection26'
 include 'hw16-application_context'
+include 'L28-springDataJdbc'
+
 
