--- a/hw17-springData/src/test/resources/testcontainers.properties
+++ b/hw17-springData/src/test/resources/testcontainers.properties
@@ -1,6 +1,4 @@
-docker run --rm --name pg-docker \
--e POSTGRES_PASSWORD=pwd \
--e POSTGRES_USER=usr \
--e POSTGRES_DB=demoDB \
--p 5430:5432 \
-postgres:13
+spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
+spring.datasource.url=${DB_URL}
+spring.datasource.username=${DB_USERNAME}
+spring.datasource.password=${DB_PASSWORD}
