--- a/hw17-springData/build.gradle
+++ b/hw17-springData/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id("java")
 }
 
-group = "cvetkov.example"
+group = "ru.otus"
 version = "unspecified"
 
 repositories {
@@ -14,29 +14,23 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jdbc'
     implementation 'org.flywaydb:flyway-core'
     implementation 'org.postgresql:postgresql'
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
-    testImplementation 'org.testcontainers:junit-jupiter'
-    testImplementation 'org.testcontainers:postgresql'
-
     implementation 'com.google.code.findbugs:jsr305'
-// https://mvnrepository.com/artifact/org.testcontainers/testcontainers
-//        testImplementation group: 'org.testcontainers', name: 'testcontainers', version: '1.19.0'
-
-
     implementation group: 'org.springframework', name: 'spring-context', version: '6.0.12'
-    // https://mvnrepository.com/artifact/org.springframework/spring-core
     implementation group: 'org.springframework', name: 'spring-core', version: '6.0.12'
-    // https://mvnrepository.com/artifact/org.springframework/spring-beans
     implementation group: 'org.springframework', name: 'spring-beans', version: '6.0.12'
-    // https://mvnrepository.com/artifact/org.reflections/reflections
     implementation group: 'org.reflections', name: 'reflections', version: '0.10.2'
-// https://mvnrepository.com/artifact/org.slf4j/slf4j-api
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.9'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-actuator'
+// https://mvnrepository.com/artifact/org.projectlombok/lombok
+//    compileOnly group: 'org.projectlombok', name: 'lombok', version: '1.18.30'
 
 
+    testImplementation "org.testcontainers:testcontainers:1.19.0"
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+//    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+    testImplementation 'org.testcontainers:junit-jupiter'
+    testImplementation 'org.testcontainers:postgresql'
 }
 
 tasks.test {
