--- a/hw17-springData/src/test/resources/testcontainers.properties
+++ b/hw17-springData/src/test/resources/testcontainers.properties
@@ -1,4 +1,4 @@
 spring.datasource.driver-class-name=org.testcontainers.jdbc.ContainerDatabaseDriver
-spring.datasource.url=${DB_URL}
-spring.datasource.username=${DB_USERNAME}
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.url=jdbc:postgresql://localhost:5430/demoDB
+spring.datasource.username=usr
+spring.datasource.password=pwd
